// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhaseBanner behaviour renders correctly 1`] = `
<div
  class="govuk-phase-banner"
>
  <p
    class="govuk-phase-banner__content"
  >
    <strong
      class="govuk-tag govuk-phase-banner__content__tag "
    >
      Prototype
    </strong>
    <span
      class="govuk-phase-banner__text"
    >
      This is a prototype.
       
      <a
        class="govuk-link"
        data-qa="spa-switch"
        href="javascript:document.cookie=\\"spaMode=false\\";location.reload();"
      >
        Switch 
        off
         experimental single-page mode.
      </a>
    </span>
  </p>
</div>
`;

exports[`PhaseBanner renders correctly 1`] = `
<div
  className="govuk-phase-banner"
>
  <p
    className="govuk-phase-banner__content"
  >
    <strong
      className="govuk-tag govuk-phase-banner__content__tag "
    >
      Prototype
    </strong>
    <span
      className="govuk-phase-banner__text"
    >
      This is a prototype.
       
      <a
        className="govuk-link"
        data-qa="spa-switch"
        href="javascript:document.cookie=\\"spaMode=true\\";location.reload();"
      >
        Switch 
        on
         experimental single-page mode.
      </a>
    </span>
  </p>
</div>
`;
